[package]
name = "adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
pollster = "0.2.5"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
cfg-if = "1"
cgmath = "0.18"
noise = "0.7"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
num-traits = "0.2.15"
bytemuck = { version = "1.9.1", features = [ "derive" ] }

